We now get the flags in lower case so adapt to that

BUG: 258635